<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="button0_large_text" translatable="false">0</string>
    <string name="button1_large_text" translatable="false">1</string>
    <string name="button2_large_text" translatable="false">2</string>
    <string name="button2_small_text" translatable="false">ABC</string>
    <string name="button3_large_text" translatable="false">3</string>
    <string name="button3_small_text" translatable="false">DEF</string>
    <string name="button4_large_text" translatable="false">4</string>
    <string name="button4_small_text" translatable="false">GHI</string>
    <string name="button5_large_text" translatable="false">5</string>
    <string name="button5_small_text" translatable="false">JKL</string>
    <string name="button6_large_text" translatable="false">6</string>
    <string name="button6_small_text" translatable="false">MNO</string>
    <string name="button7_large_text" translatable="false">7</string>
    <string name="button7_small_text" translatable="false">PQRS</string>
    <string name="button8_large_text" translatable="false">8</string>
    <string name="button8_small_text" translatable="false">TUV</string>
    <string name="button9_large_text" translatable="false">9</string>
    <string name="button9_small_text" translatable="false">WXYZ</string>
    <string name="empty" translatable="false" />
    <string name="pin_code_storage_error">Не удалось сохранить PIN. Попробуйте ещё раз.</string>

    <string name="pin_code_forgot_text">Забыли PIN-код?</string>
    <string name="pin_code_step_disable">Отключите %d-значный пин-код</string>
    <string name="pin_code_step_create">Придумайте PIN-код</string>
    <string name="pin_code_step_change">Введите PIN-код</string>
    <string name="pin_code_step_unlock">Введите PIN-код</string>
    <string name="pin_code_step_enable_confirm">Повторите ваш PIN-код</string>
    <string name="pin_code_fingerprint_text">Отпечаток пальца</string>
    <string name="pin_code_fingerprint_success">Отпечаток принят</string>
    <string name="pin_code_fingerprint_not_recognized">Отпечаток не принят. Попробуйте снова.</string>
    <string name="pin_code_attempts">Неправильный PIN. Попыток осталось: %1$d</string>
    <string name="pin_codes_do_not_match">PIN-коды не совпадают</string>
    <string name="password_successfully_saved">Пароль успешно сохранен</string>
    <string name="pin_code_success_created">PIN-код создан</string>
    <string name="pin_code_success_validated">Доступ разрешён</string>
    <string name="pin_code_success_changed">PIN-код изменён</string>
    <string name="pin_code_success_deleted">PIN-код удалён</string>


    <string name="authorization">Авторизация</string>
    <string name="use_biometry">Используйте биометрию для авторизации</string>
    <string name="confirm_identity">Подтвердите свою личность</string>
    <string name="cancel_action">Отмена</string>

    <string name="forgot_pin">Забыли PIN-код?</string>
    <string name="forgot_pin_instruction">Если вы забыли свой PIN-код, вы можете восстановить его, заново пройдя авторизацию.</string>
    <string name="ok_button">Ок</string>
    <string name="pin_code_already_configured">PIN-код уже настроен</string>
    <string name="pin_code_not_configured">PIN-код не настроен</string>
</resources>


